test/valid/UpwardsCast/UpwardsCast.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: UpwardsCast.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class UpwardsCast extends Object is

	method m : (x : Object) -> String is
		x as String